fix overflow-x and organized attrs

--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -1,6 +1,7 @@
 .section {
     min-height: 95vh;
     max-width: 100%;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
